# mahjong-ops-agent

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
docs/: agent_runtime.md  agent_runtime_v2.md  agent_runtime_v3.md  agent_training_and_improvement.md  architecture.md  architecture_refactor_plan.md  astrbot_weixin_raw_channel.md  cross_channel_game_reference_todo.md  hermes_weixin_raw_channel.md  interview_agent_development_qa_gap_plan.md  product_capabilities.md  production_architecture.md  project_architecture_full.md  roadmap.md  runtime_loop_design.md  system_explanation.html  wechat_record_analysis.md  wechaty_weixin_raw_channel.md
eval/: README.md  badcases.jsonl  boss_trial_golden.jsonl  few_shot_examples.jsonl  golden_dataset.jsonl  real_group_chat_20260723_review.md
examples/: demo.py
scripts/: agent_runtime_app.py  analyze_wechaty_quote_payloads.py  check_badcase_regression_coverage.py  record_eval_case.py  run_agent_app.py  run_agent_runtime_eval.py  run_agent_runtime_v2_eval.py  run_agent_runtime_v3_eval.py  run_agent_server.py  run_agent_v2_app.py  run_agent_v3_app.py  run_boss_trial_app.py  run_chatroom.py  run_concurrency_eval.py  run_console_agent.py  run_controlled_agent_acceptance.py  run_controlled_workflow_eval.py  run_deepseek_integration_test.py  run_evals.py  run_group_session_live_simulation.py  run_legacy_evals.py  run_llm_agent_smoke_test.py  run_llm_smoke_test.py  run_periodic_chat_simulator.py  run_privacy_isolation_live_eval.py  run_real_group_chat_flow_eval.py  run_real_owner_chat_live_eval.py  run_scenario_eval.py  run_tests.py  (+9 more)
(+362 files in other folders)
