[project]
name = "mahjong-ops-workflow"
version = "0.1.0"
description = "Production-controllable agentic workflow engine for mahjong room operations."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Codex" }]

[project.optional-dependencies]
dev = ["pytest>=9.1.1"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that call external services such as DeepSeek; require explicit opt-in",
]
