[project]
name = "mahjong-ops-agent"
version = "2.0.0"
description = "Goal-driven agent runtime for private-domain mahjong room operations."
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Codex" }]

[project.optional-dependencies]
dev = ["pytest>=9.1.1", "Faker>=25.0"]
distributed = ["redis>=5.0"]
simulation = ["Faker>=25.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that call external services such as DeepSeek; require explicit opt-in",
]

[tool.setuptools.package-data]
"mahjong_agent_runtime.knowledge" = ["*.jsonl"]
